--- a/src/works.html
+++ b/src/works.html
@@ -18,7 +18,31 @@
 		<div class="container">
             <h1 class="page_title">Мої роботи</h1>
 
+			<article class="works">
+<div class="work_preview">
 
+</div>
+				<div class="work_content">
+					<h2 class="work_title">
+						<a href="#" target="_blank">altermono.com</a>
+					</h2>
+					<div class="work_description">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat.
+						</p>
+					</div>
+					<ul>
+						<li>
+							Дизайн
+						</li><li>
+							Створення сайту
+						</li><li>
+							SMM
+						</li>
+					</ul>
+					<a  class="btn-blu btn-rounded" href="#" target="_blank">Перейти на сайт</a>
+				</div>
+			</article>
 		</div>
 	</main>
 </div>
