--- a/src/works.html
+++ b/src/works.html
@@ -16,33 +16,73 @@
 
 	<main class="main">
 		<div class="container">
-            <h1 class="page_title">Мої роботи</h1>
+			<h1 class="page_title">Мої роботи</h1>
 
 			<article class="works">
-<div class="work_preview">
-
-</div>
+				<div class="work_preview">
+					<img src="/img/works_1.png">
+				</div>
 				<div class="work_content">
 					<h2 class="work_title">
 						<a href="#" target="_blank">altermono.com</a>
 					</h2>
 					<div class="work_description">
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat.
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum volutpat orci turpis
+							urna. Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at
+							tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed
+							volutpat massa. Egestas ornare vel volutpat.
 						</p>
 					</div>
-					<ul>
-						<li>
+					<ul class="tags">
+						<li class="tags_item">
 							Дизайн
-						</li><li>
+						</li>
+						<li class="tags_item">
 							Створення сайту
-						</li><li>
+						</li>
+						<li class="tags_item">
 							SMM
 						</li>
 					</ul>
-					<a  class="btn-blu btn-rounded" href="#" target="_blank">Перейти на сайт</a>
+					<div class="work_footer">
+						<a class="btn btn-blu btn-rounded" href="#" target="_blank">Перейти на сайт</a>
+					</div>
 				</div>
 			</article>
+
+			<article class="works">
+				<div class="work_preview">
+					<img src="/img/works_2.jpg">
+				</div>
+				<div class="work_content">
+					<h2 class="work_title">
+						<a href="#" target="_blank">codedoco.com</a>
+					</h2>
+					<div class="work_description">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum volutpat orci turpis
+							urna. Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at
+							tincidunt arcu egestas.
+						</p>
+					</div>
+					<ul class="tags">
+						<li class="tags_item">
+							Дизайн
+						</li>
+						<li class="tags_item">
+							Створення сайту
+						</li>
+						<li class="tags_item">
+							SMM
+						</li>
+					</ul>
+					<div class="work_footer">
+						<a class="btn btn-blu btn-rounded" href="#" target="_blank">Перейти на сайт</a>
+					</div>
+				</div>
+			</article>
+
 		</div>
 	</main>
 </div>
